# dmi_reader

./: README.md  dmi_reader.py  pyproject.toml  requirements.txt  test.py
