[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmi-reader"
version = "1.0.0"
description = "Cross-platform DMI hardware identifier reader without root/admin privileges"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    'wmi>=1.5.1; sys_platform=="win32"',
    'pywin32>=227; sys_platform=="win32"',
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "flake8>=5.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/dmi-reader"
Repository = "https://github.com/yourusername/dmi-reader"
Issues = "https://github.com/yourusername/dmi-reader/issues"